--- a/RoutinePlan/app/src/main/res/layout/fragment_routines.xml
+++ b/RoutinePlan/app/src/main/res/layout/fragment_routines.xml
@@ -2,17 +2,33 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     >
 
-  <LinearLayout
+  <android.support.design.widget.CoordinatorLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:orientation="vertical"
+      android:id="@+id/coordinator_layout"
       >
 
-    <Button
-        android:id="@+id/buttonPanel"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+
+      <android.support.v7.widget.RecyclerView
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:id="@+id/recycler_view_routines"
+          />
+    </LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Routines"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@android:drawable/ic_dialog_email"
         />
-  </LinearLayout>
+
+  </android.support.design.widget.CoordinatorLayout>
 </layout>
