--- a/RoutinePlan/app/src/main/res/layout/activity_tasks.xml
+++ b/RoutinePlan/app/src/main/res/layout/activity_tasks.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     >
-
   <android.support.design.widget.CoordinatorLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
@@ -19,14 +19,12 @@
           android:layout_height="match_parent"
           android:id="@+id/recycler_view_routines"
           />
-
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
-          android:text="@string/display_no_routines"
+          android:text="@string/display_no_tasks"
           />
-
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
