--- a/RoutinePlan/app/src/main/res/layout/fragment_user.xml
+++ b/RoutinePlan/app/src/main/res/layout/fragment_user.xml
@@ -1,16 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
-  <LinearLayout
+  <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:orientation="vertical"
-      >
+      android:fillViewport="true">
 
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/sign_in_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-  </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+
+      <de.hdodenhof.circleimageview.CircleImageView
+          android:id="@+id/profile_image"
+          android:layout_centerHorizontal="true"
+          android:layout_width="180dp"
+          android:layout_height="180dp"
+          android:layout_margin="16dp"
+          android:src="@drawable/user_image"
+          app:civ_border_width="2dp"
+          app:civ_border_color="#FF000000"/>
+
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:id="@+id/user_name"
+          android:text="Awesome User"
+          android:layout_below="@id/profile_image"
+          android:layout_centerHorizontal="true"
+          android:textSize="20sp"
+          android:layout_margin="16dp"
+          android:fontFamily="sans-serif-light"
+          />
+
+      <Button
+          android:layout_width="300dp"
+          android:layout_height="wrap_content"
+          android:layout_centerHorizontal="true"
+          android:text="Preferences"
+          android:background="@android:color/white"
+          android:layout_below="@id/user_name"
+          android:id="@+id/preferences"
+          />
+
+      <Button
+          android:layout_width="300dp"
+          android:layout_height="wrap_content"
+          android:layout_centerHorizontal="true"
+          android:text="About"
+          android:background="@android:color/white"
+          android:layout_below="@id/preferences"
+          android:id="@+id/about"
+          />
+
+      <Button
+          android:layout_width="300dp"
+          android:layout_height="wrap_content"
+          android:layout_centerHorizontal="true"
+          android:text="Logout"
+          android:background="@android:color/white"
+          android:layout_below="@id/about"
+          android:id="@+id/logout"
+
+          />
+
+
+      <com.google.android.gms.common.SignInButton
+          android:id="@+id/sign_in_button"
+          android:layout_centerHorizontal="true"
+          android:layout_below="@id/logout"
+          android:layout_margin="16dp"
+          android:layout_width="300dp"
+          android:layout_height="wrap_content" />
+
+    </RelativeLayout>
+  </ScrollView>
 </layout>
