Add GCM, Widget, ContentProvider

--- a/RoutinePlan/app/src/main/res/layout/activity_tasks.xml
+++ b/RoutinePlan/app/src/main/res/layout/activity_tasks.xml
@@ -15,27 +15,27 @@
 
         >
 
-      <RadioGroup
-          android:id="@+id/radio_group_break"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:padding="16dp"
-          >
+      <!--<RadioGroup-->
+          <!--android:id="@+id/radio_group_break"-->
+          <!--android:layout_width="match_parent"-->
+          <!--android:layout_height="wrap_content"-->
+          <!--android:padding="16dp"-->
+          <!--&gt;-->
 
-        <RadioButton
-            android:id="@+id/radio_five_minutes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="5 Mins"
-            />
+        <!--<RadioButton-->
+            <!--android:id="@+id/radio_five_minutes"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="5 Mins"-->
+            <!--/>-->
 
-        <RadioButton
-            android:id="@+id/radio_ten_minutes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="10 Mins"
-            />
-      </RadioGroup>
+        <!--<RadioButton-->
+            <!--android:id="@+id/radio_ten_minutes"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="10 Mins"-->
+            <!--/>-->
+      <!--</RadioGroup>-->
 
       <TextView
           android:layout_width="match_parent"
@@ -53,16 +53,23 @@
           />
 
 
+      <ImageView
+          android:layout_width="match_parent"
+          android:layout_height="60dp"
+          android:padding="4dp"
+          android:src="@drawable/ic_play"
+          android:background="@color/colorPrimaryDark"
+          />
     </LinearLayout>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_add"
-        />
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/fab"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="bottom|end"-->
+        <!--android:layout_margin="@dimen/fab_margin"-->
+        <!--android:src="@drawable/ic_play"-->
+        <!--/>-->
 
   </android.support.design.widget.CoordinatorLayout>
 </layout>
