--- a/RoutinePlan/app/src/main/res/layout/item_routine.xml
+++ b/RoutinePlan/app/src/main/res/layout/item_routine.xml
@@ -1,43 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     >
-
-  <RelativeLayout
+  <com.chauthai.swipereveallayout.SwipeRevealLayout
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:orientation="vertical"
-      android:padding="16dp"
-      >
+      android:id="@+id/swipe_routine_layout"
+      android:layout_height="72dp"
+      app:mode="same_level"
+      android:foreground="?attr/selectableItemBackground"
+      android:clickable="true"
+      app:dragEdge="right">
 
-    <TextView
-        android:id="@+id/text_view_routine_name"
+    <!-- Your secondary layout here -->
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-light"
-        android:textColor="@android:color/black"
-        android:textSize="22sp"
-        tools:text="Test"
-        />
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/text_view_task_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/text_view_routine_name"
-        android:fontFamily="sans-serif-light"
-        android:text="@string/tap_to_add_tasks"
-        />
+      <ImageView
+          android:layout_width="70dp"
+          android:layout_height="match_parent"
+          android:layout_gravity="end"
+          android:background="@color/colorPrimaryDark"
+          android:padding="@dimen/default_margin"
+          android:src="@drawable/ic_edit"
+          android:id="@+id/rename"
+          />
 
-    <ImageView
-        android:id="@+id/image_view_play_routine"
-        android:layout_width="52dp"
-        android:layout_height="52dp"
-        android:layout_alignBottom="@id/text_view_task_time"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@id/text_view_routine_name"
-        android:src="@drawable/ic_play"
-        />
-  </RelativeLayout>
+      <ImageView
+          android:layout_width="70dp"
+          android:layout_height="match_parent"
+          android:layout_gravity="end"
+          android:background="@color/colorAccent"
+          android:padding="@dimen/default_margin"
+          android:src="@drawable/ic_delete"
+          android:id="@+id/delete"
+          />
+    </LinearLayout>
+
+    <!-- Your main layout here -->
+    <RelativeLayout
+        android:id="@+id/routine_item"
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:background="@android:color/white"
+
+        >
+
+      <TextView
+          android:id="@+id/text_view_routine_name"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginLeft="@dimen/default_margin"
+          android:layout_marginStart="@dimen/default_margin"
+          android:layout_marginTop="@dimen/default_margin"
+          android:fontFamily="sans-serif"
+          android:textColor="@android:color/black"
+          android:textSize="16sp"
+          tools:text="Test"
+          />
+
+      <TextView
+          android:id="@+id/text_view_total_tasks"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_below="@id/text_view_routine_name"
+          android:layout_marginLeft="@dimen/default_margin"
+          android:layout_marginStart="@dimen/default_margin"
+          android:fontFamily="sans-serif-light"
+          tools:text="3 Tasks"
+          />
+
+
+      <TextView
+          android:id="@+id/text_view_task_time"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignParentEnd="true"
+          android:layout_alignParentRight="true"
+          android:layout_centerVertical="true"
+          android:layout_marginEnd="@dimen/default_margin"
+          android:layout_marginRight="@dimen/default_margin"
+          android:fontFamily="sans-serif-light"
+          android:text="@string/tap_to_add_tasks"
+          />
+      <!--<ImageView-->
+      <!--android:id="@+id/image_view_play_routine"-->
+      <!--android:layout_width="52dp"-->
+      <!--android:layout_height="52dp"-->
+      <!--android:layout_alignBottom="@id/text_view_task_time"-->
+      <!--android:layout_alignParentEnd="true"-->
+      <!--android:layout_alignParentRight="true"-->
+      <!--android:layout_alignTop="@id/text_view_routine_name"-->
+      <!--android:src="@drawable/ic_play"-->
+      <!--/>-->
+      <View
+          android:layout_width="match_parent"
+          android:layout_height="1dp"
+          android:layout_alignParentBottom="true"
+          android:alpha="0.1"
+          android:background="@android:color/black"
+          />
+    </RelativeLayout>
+
+  </com.chauthai.swipereveallayout.SwipeRevealLayout>
+
 </layout>
