--- a/RoutinePlan/app/src/main/res/menu/task_activity_menu.xml
+++ b/RoutinePlan/app/src/main/res/menu/task_activity_menu.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
   <item
-      android:id="@+id/rename"
-      android:title="Rename"
-      app:showAsAction="never"
+      android:id="@+id/add"
+      android:title="Add Task"
+      android:icon="@drawable/ic_add"
+      app:showAsAction="always"
       />
 </menu>
