--- a/RoutinePlan/app/src/main/res/layout/activity_tasks.xml
+++ b/RoutinePlan/app/src/main/res/layout/activity_tasks.xml
@@ -56,7 +56,9 @@
       <ImageView
           android:layout_width="match_parent"
           android:layout_height="60dp"
-          android:padding="4dp"
+          android:padding="10dp"
+          android:foreground="?attr/selectableItemBackground"
+          android:id="@+id/play"
           android:src="@drawable/ic_play"
           android:background="@color/colorPrimaryDark"
           />
