--- a/RoutinePlan/app/src/main/res/layout/item_routine.xml
+++ b/RoutinePlan/app/src/main/res/layout/item_routine.xml
@@ -32,7 +32,7 @@
           android:layout_width="70dp"
           android:layout_height="match_parent"
           android:layout_gravity="end"
-          android:background="@color/colorAccent"
+          android:background="@color/danger"
           android:padding="@dimen/default_margin"
           android:src="@drawable/ic_delete"
           android:id="@+id/delete"
