--- a/RoutinePlan/app/src/main/res/layout/fragment_history.xml
+++ b/RoutinePlan/app/src/main/res/layout/fragment_history.xml
@@ -6,6 +6,7 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
+      android:background="@android:color/white"
       >
 
     <android.support.v7.widget.RecyclerView
@@ -14,11 +15,14 @@
         android:id="@+id/recyclerViewHistory"
 
         />
-
-    <com.db.chart.view.BarChartView
-        android:id="@+id/barchart"
+    <TextView
+        android:id="@+id/empty_view"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        />
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:visibility="gone"
+        android:fontFamily="sans-serif-light"
+        android:textColor="@android:color/black"
+        android:text="No History Available" />
   </LinearLayout>
 </layout>
